<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.FragmentWeatherForecastPerCityModel"
    android:background="@drawable/gradient_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/sp_choose_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:entries="@array/Temperature"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sp_choose_temperature"
            android:layout_marginEnd="30dp"/>

        <ImageView
            android:layout_width="398dp"
            android:layout_height="208dp"
            android:background="@drawable/chicagoforweatherapp"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="511dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_temperature_display"
            android:layout_width="193dp"
            android:layout_height="139dp"
            android:layout_marginBottom="160dp"
            android:text="@string/the_temperature_for_today_is_as_follows"
            android:textSize="25sp"
            android:gravity="center"
            android:fontFamily="casual"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/tv_feels_like_display"
            android:layout_width="135dp"
            android:layout_height="104dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/feels_like"
            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/tv_temperature_display"
            app:layout_constraintTop_toBottomOf="@id/tv_temperature_display" />

        <TextView
            android:id="@+id/tv_clouds"
            android:layout_width="126dp"
            android:layout_height="101dp"
            android:layout_marginTop="24dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/clouds"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_temperature_display" />

        <TextView
            android:id="@+id/tv_description_display"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="240dp"
            android:fontFamily="casual"
            android:text="Description: "
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>